<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pootle</string>
    <string name="start">Pootle</string>
    <string name="username">Kullanıcı Adı:</string>
    <string name="passwd">Şifre:</string>
    <string name="login">Oturum Aç</string>
    <string name="server">Sunucu:</string>
    <string name="remember">Beni Hatırla</string>
    <string name="forgot">Şifremi Unuttum</string>
    <string name="listlanguages">Diller</string>
    <string name="listprojects">Projeler</string>
    <string name="translate">Çalışma gerekli</string>
    <string name="send">Gönder</string>
    <string name="suggestion">>>Öner</string>
    <string name="translater">Çevir</string>
    <string name="choose">Seçiniz</string>
    <string name="files">Dosya Adı</string>
    <string name="total">Toplam</string>
    <string name="needtranslate">Çeviri Gerekli</string>


</resources>
