<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:background="@android:color/white" android:weightSum="1">

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="111dp"
            android:id="@+id/cevrilecek"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_weight="0.03" android:weightSum="1">
        <Button
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:text="&lt;&lt;"
                android:onClick="Gerigit"
                android:id="@+id/button4"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="96dp"
                android:id="@+id/cevrilmis" android:layout_weight="0.94"/>
        <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="44dp"
                android:layout_height="56dp"
                android:text=">>"
                android:onClick="Ilerigit"
                android:id="@+id/button5"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_weight="0.03" android:weightSum="1">
        <CheckBox
                android:layout_width="122dp"
                android:layout_height="36dp"
                android:text="@string/translate"
                android:id="@+id/checkBox_need"
                android:checked="false"
                android:textColor="@android:color/black"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:onClick="cevir"
                android:id="@+id/button6" android:layout_weight="0.36"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/suggestion"
                android:id="@+id/textView6" android:layout_weight="0.56"
                android:textColor="@android:color/holo_blue_dark"/>
    </LinearLayout>
    <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:text="Önerileri Listele"
            android:onClick="suggestion_listele"
            android:id="@+id/showsuggestions"/>
    <Spinner
            android:drawSelectorOnTop="true"
            android:id="@+id/spinner_need"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
         >
    </Spinner>>
    <TextView
            android:layout_width="169dp"
            android:layout_height="wrap_content"
            android:text="Terminoloji"
            android:id="@+id/textView5" android:layout_weight="0.09" android:textSize="20dp"
            android:textColor="@android:color/black"/>
    <ListView
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:id="@+id/listView4" android:visibility="visible"/>
</LinearLayout>